k8s/puchi-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puchi-fe
  labels:
    app: puchi-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: puchi-fe
  template:
    metadata:
      labels:
        app: puchi-fe
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: puchi-fe
          image: ghcr.io/puchidemy/puchi-frontend:latest
          ports:
            - containerPort: 3000
      restartPolicy: Always
