k8s/puchi-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puchi-fe
spec:
  selector:
    app: puchi-fe
  ports:
    - protocol: TCP
      port: 80 # Traefik route vào
      targetPort: 3000 # Container port
